force-app/domains/household-360/main/default/objects/Account/fields/CreditRating__c.field-meta.xml
<CustomField>
    <fullName>CreditRating__c</fullName>
    <description>Score interno de credito do cliente (ex.: 872). Exibido no resumo do perfil da Visao 360. Fontes finais de KYC/score seguem premissa aberta 05 da spec; este campo e o placeholder reversivel (T-A04).</description>
    <inlineHelpText>Score interno de credito do cliente.</inlineHelpText>
    <label>Rating de Credito</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>