force-app/domains/household-360/main/default/objects/Account/fields/CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CustomerSince__c</fullName>
    <description>Data de inicio do relacionamento do cliente com o Porto Bank. Exibida no resumo do perfil da Visao 360 (cliente desde) e base do tempo de relacionamento (T-A04, Cen 18).</description>
    <inlineHelpText>Data em que o cliente iniciou o relacionamento com o banco.</inlineHelpText>
    <label>Cliente Desde</label>
    <type>Date</type>
</CustomField>