force-app/domains/household-360/main/default/objects/Account/fields/FamilySize__c.field-meta.xml
<CustomField>
    <fullName>FamilySize__c</fullName>
    <description>Quantidade de membros do nucleo familiar/household vinculado a esta conta raiz (ex.: filhos + conjuge). Usada no resumo do perfil da Visao 360 (T-A04).</description>
    <inlineHelpText>Quantidade de membros do household.</inlineHelpText>
    <label>Tamanho da Familia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>