force-app/domains/household-360/main/default/objects/Account/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <description>Estado civil do cliente pessoa fisica. Exibido no resumo do perfil da Visao 360 (T-A04, Cen 18). Para PJ, manter em branco.</description>
    <inlineHelpText>Estado civil declarado do cliente.</inlineHelpText>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro</fullName>
            </value>
            <value>
                <fullName>Solteira</fullName>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Casada</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Divorciada</fullName>
            </value>
            <value>
                <fullName>Viuvo</fullName>
                <label>Viúvo</label>
            </value>
            <value>
                <fullName>Viuva</fullName>
                <label>Viúva</label>
            </value>
            <value>
                <fullName>Uniao Estavel</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>