force-app/domains/household-360/main/default/objects/Account/fields/ProfileCompleteness__c.field-meta.xml
<CustomField>
    <fullName>ProfileCompleteness__c</fullName>
    <description>Percentual de completude cadastral do cliente (ex.: 80). Exibido no resumo do perfil da Visao 360 (T-A04, Cen 18).</description>
    <inlineHelpText>Percentual de completude do cadastro do cliente.</inlineHelpText>
    <label>Completude do Cadastro</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>